<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E3DEE6"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusRed"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/plusRouge"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/plusGreen"
        app:layout_constraintEnd_toStartOf="@id/minusRed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minusRed"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/minusRouge"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/minusGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plusRed"
        app:layout_constraintTop_toBottomOf="@+id/light" />

    <Button
        android:id="@+id/plusGreen"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/plusVert"
        android:layout_margin="10dp"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/plusBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/minusGreen"/>

    <Button
        android:id="@+id/minusGreen"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/minusVert"
        android:layout_margin="10dp"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/minusBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plusGreen"/>

    <Button
        android:id="@+id/plusBlue"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/plusBlue"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/color1"
        app:layout_constraintEnd_toStartOf="@id/minusBlue"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minusBlue"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/minusBlue"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/plusBlue" />

    <Button
        android:id="@+id/light"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/off"
        android:text="Eteinte"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/plusRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/color1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="1"
        app:cornerRadius="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="10dp"
        android:backgroundTint="@color/color1"
        app:layout_constraintEnd_toStartOf="@id/color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/color2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2"
        app:cornerRadius="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="10dp"
        android:backgroundTint="@color/color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/color3"
        app:layout_constraintStart_toEndOf="@+id/color1" />

    <Button
        android:id="@+id/color3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="3"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/color3"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@id/color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>